{
  "version": 4,
  "terraform_version": "1.2.4",
  "serial": 15,
  "lineage": "d2153d22-125f-c85b-5d82-0a6f39402bc6",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "my_igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:601810751098:internet-gateway/igw-0f1d3cf56b67db7a7",
            "id": "igw-0f1d3cf56b67db7a7",
            "owner_id": "601810751098",
            "tags": {
              "Name": "VProfile-App-Igw"
            },
            "tags_all": {
              "Name": "VProfile-App-Igw"
            },
            "vpc_id": "vpc-0577e3a07f9473c15"
          },
          "dependencies": [
            "aws_vpc.vprofileapp_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "my_route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:601810751098:route-table/rtb-082e492e684627fb3",
            "id": "rtb-082e492e684627fb3",
            "owner_id": "601810751098",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0f1d3cf56b67db7a7",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "VProfile-App-RouteTable"
            },
            "tags_all": {
              "Name": "VProfile-App-RouteTable"
            },
            "timeouts": null,
            "vpc_id": "vpc-0577e3a07f9473c15"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.my_igw",
            "aws_vpc.vprofileapp_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_subnet_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-05e6235f4e3dada26",
            "route_table_id": "rtb-082e492e684627fb3",
            "subnet_id": "subnet-014528e6caddb13a5"
          },
          "dependencies": [
            "aws_internet_gateway.my_igw",
            "aws_route_table.my_route_table",
            "aws_subnet.public_subnets",
            "aws_vpc.vprofileapp_vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0ad9fafaee417d714",
            "route_table_id": "rtb-082e492e684627fb3",
            "subnet_id": "subnet-02ce71474b7d868db"
          },
          "dependencies": [
            "aws_internet_gateway.my_igw",
            "aws_route_table.my_route_table",
            "aws_subnet.public_subnets",
            "aws_vpc.vprofileapp_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "private_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:601810751098:security-group/sg-091fdf78d028339b8",
            "description": "Security group for private instances",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-091fdf78d028339b8",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "Vprofile-PrivateSecurityGroup",
            "name_prefix": "",
            "owner_id": "601810751098",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "Vprofile-PrivateSecurityGroup"
            },
            "tags_all": {
              "Name": "Vprofile-PrivateSecurityGroup"
            },
            "timeouts": null,
            "vpc_id": "vpc-0577e3a07f9473c15"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.vprofileapp_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "public_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:601810751098:security-group/sg-0c81f375e6f54de90",
            "description": "Security group for public instances",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0c81f375e6f54de90",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "Vprofile-PublicSecurityGroup",
            "name_prefix": "",
            "owner_id": "601810751098",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "Vprofile-PublicSecurityGroup"
            },
            "tags_all": {
              "Name": "Vprofile-PublicSecurityGroup"
            },
            "timeouts": null,
            "vpc_id": "vpc-0577e3a07f9473c15"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.vprofileapp_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnets",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:601810751098:subnet/subnet-0a2744e9ad3fcd31e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0a2744e9ad3fcd31e",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "601810751098",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "VProfileApp-PrivateSubnet-0"
            },
            "tags_all": {
              "Name": "VProfileApp-PrivateSubnet-0"
            },
            "vpc_id": "vpc-0577e3a07f9473c15"
          },
          "dependencies": [
            "aws_vpc.vprofileapp_vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:601810751098:subnet/subnet-0f867e3b1c8240648",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "10.0.4.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0f867e3b1c8240648",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "601810751098",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "VProfileApp-PrivateSubnet-1"
            },
            "tags_all": {
              "Name": "VProfileApp-PrivateSubnet-1"
            },
            "vpc_id": "vpc-0577e3a07f9473c15"
          },
          "dependencies": [
            "aws_vpc.vprofileapp_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnets",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:601810751098:subnet/subnet-014528e6caddb13a5",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-014528e6caddb13a5",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "601810751098",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "VprofileApp-PublicSubnet-0"
            },
            "tags_all": {
              "Name": "VprofileApp-PublicSubnet-0"
            },
            "vpc_id": "vpc-0577e3a07f9473c15"
          },
          "dependencies": [
            "aws_vpc.vprofileapp_vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:601810751098:subnet/subnet-02ce71474b7d868db",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-02ce71474b7d868db",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "601810751098",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "VprofileApp-PublicSubnet-1"
            },
            "tags_all": {
              "Name": "VprofileApp-PublicSubnet-1"
            },
            "vpc_id": "vpc-0577e3a07f9473c15"
          },
          "dependencies": [
            "aws_vpc.vprofileapp_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vprofileapp_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:601810751098:vpc/vpc-0577e3a07f9473c15",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-04a1454e9e25ab732",
            "default_route_table_id": "rtb-0ab8816a9e94935fe",
            "default_security_group_id": "sg-0f364449db2b0a304",
            "dhcp_options_id": "dopt-060c429f083e05f21",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0577e3a07f9473c15",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0ab8816a9e94935fe",
            "owner_id": "601810751098",
            "tags": {
              "Name": "VProfile-App-Vpc"
            },
            "tags_all": {
              "Name": "VProfile-App-Vpc"
            }
          }
        }
      ]
    }
  ]
}